--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,16 @@
+/* #region reset */
 body {
   font-family: "Roboto", sans-serif;
   background-color: #fefefe;
   font-size: 16px;
   color: #2c2c2c;
+}
+
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -20,6 +28,198 @@ button {
   cursor: pointer;
   padding: 0;
 }
+
+a {
+  text-decoration: none;
+}
+/* #endregion reset */
+
+/* #region common */
+
+.container {
+  max-width: 320px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 32px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+    padding: 0 16px;
+  }
+}
+
+/* #endregion common */
+
+/* #region header */
+
+.header-section {
+  box-shadow: 0 4px 24px 0 rgba(105, 105, 105, 0.1);
+  padding: 10px 0;
+}
+
+header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* @media screen and (max-width: 767.98px) {
+  header .container {
+    position: relative;
+  }
+} */
+
+.nav-list,
+.btn {
+  display: none;
+}
+
+.btn-menu {
+  background-color: transparent;
+}
+
+.btn-menu-icon {
+  fill: #7eb101;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-menu:hover .btn-menu-icon,
+.btn-menu:focus .btn-menu-icon {
+  fill: #ffe450;
+}
+
+@media screen and (min-width: 768px) {
+.header-section {
+  padding: 0;
+}
+
+  .btn-menu {
+    display: none;
+  }
+
+  .nav-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 30px;
+    flex-grow: 1;
+  }
+
+  .nav-list {
+    display: flex;
+    align-items: center;
+    gap: 28px;
+  }
+
+  .nav-item-link {
+    display: block;
+    font-size: 14px;
+    padding: 28px 0;
+    color: #2c2c2c;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      font-weight 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .nav-item:hover .nav-item-link,
+  .nav-item:focus .nav-item-link {
+    font-weight: 700;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #bbf330;
+    transform: scale(1.2);
+  }
+
+  .btn {
+    display: block;
+    border-radius: 30px;
+    padding: 6px 17px;
+    background-color: #bbf330;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 1.5;
+    color: #2c2c2c;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .btn:hover,
+  .btn:focus {
+    background-color: #ffe450;
+  }
+
+  .menu {
+    display: none;
+  }
+}
+
+/* #endregion header */
+
+/* #region menu */
+
+.menu {
+  border-radius: 30px 0 30px 30px;
+  width: 130px;
+  height: auto;
+  box-shadow: 0 4px 24px 0 rgba(105, 105, 105, 0.1);
+  position: fixed;
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+  background-color: #fefefe;
+  z-index: 9999;
+  transform: translateY(-10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.menu.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.menu-btn-close {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  background-color: transparent;
+}
+
+.menu-nav-item {
+  padding: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-nav-item:first-child {
+  border-top-left-radius: 30px;
+}
+
+.menu-nav-item:last-child {
+  border-bottom-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+}
+
+.menu-nav-item:hover,
+.menu-nav-item:focus {
+  background-color: #bbf330;
+}
+
+.menu-nav-item-link {
+  font-size: 16px;
+  color: #000000;
+}
+
+/* #endregion menu */
 
 /* ==========modal============= */
 
